--- a/day4-simpleTodo/vite-project/src/components/Todo.css
+++ b/day4-simpleTodo/vite-project/src/components/Todo.css
@@ -1,34 +1,49 @@
-.green{
-    background-color:green,
-}
-.blue{
-    background-color:red,
-}
-.btn{
-    height:20px;
-    width:20px;
-    border-radius: 50%;
-}
+
 .todolist{
     border:1px solid blueviolet;
     height:300px;
     width:300px;
-    background-color: rgb(218, 189, 245);
+    background-color: rgb(229, 228, 231);
     margin:auto;
     margin-top:100px;
-    border-radius: 20px;
-    font-size:20px;
-    font-weight: 900;
+    font-size:22px;
+    font-weight: 600;
     text-align: center;
+    overflow-y: scroll;
 }
 input{
     padding:10px;
     border-radius:20px;
 }
 button{
-    background-color: blueviolet;
+    background-color: white;
+    width:50px;
+    height:35px;
+    font-size: large;
 }
 .todoitem>button{
     margin-left:50px;
 }
-
+.todoitem{
+    width:250px;
+    margin:auto;
+    height:50px;
+    margin-bottom:10px;
+    border-radius: 1em;
+    padding-top:10px;
+    background-color: white;
+}
+.green{
+    height:20px;
+    width:20px;
+    border-radius: 50%;
+    background-color: green;
+    display:inline-block;
+}
+.skyblue{
+    height:20px;
+    width:20px;
+    border-radius: 50%;
+    background-color: skyblue;
+    display:inline-block;
+}
